--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 a:visited {color:blue;} /* Change Visited Link Style */
 a:hover {color:black;}   /* Change Mouse Mover Style */
-
+a{
+  text-decoration: none
+}
 body{
 	text-align: center;
 }
@@ -16,6 +18,11 @@ div.line{
     height:1px;
     background:#d6d6d6
 }
+div.table_container{
+    width: 70%;
+    margin: 0 auto;
+    margin-top: 10px;
+}
 h1{
   	font-family: "Times New Roman",Serif;
   	font-weight: 700;
@@ -27,7 +34,32 @@ form{
     margin-left: 15px;
     font-family: "Times New Roman",Serif;
 }
+table{
+  text-align: left;
+  display:table;
+  border: 1px solid #d6d6d6;
+  border-collapse: collapse;
+  background-color:#fbfbfb;
+  width: 100%;
+  font-size: 0.8em;
+}
 
+td.left{
+  min-width: 200px;
+  border: 1px solid #d6d6d6;
+  border-collapse: collapse;
+  font-weight: bold;
+  background:#f5f5f5;
+}
+
+td.right{
+    min-width: 300px;
+    border: 1px solid #d6d6d6;
+    border-collapse: collapse;
+    padding-right: 100px;
+    padding-left: 100px;
+    text-align: center;
+}
 #sub{
 	margin-left: 45%;
     margin-top: 5px
@@ -35,3 +67,13 @@ form{
 #whole_container{
 	width: 100%;  margin: 0 auto;
 }
+#container{
+  border: 1px solid #d6d6d6;
+  width: 70%; 
+  visibility: hidden; 
+  height: 450px; 
+  margin: 0 auto
+}
+
+
+
