--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ table{
 }
 
 td.left{
-  min-width: 200px;
+  /*min-width: 200px;*/
   border: 1px solid #d6d6d6;
   border-collapse: collapse;
   font-weight: bold;
@@ -53,11 +53,11 @@ td.left{
 }
 
 td.right{
-    min-width: 300px;
+    /*min-width: 300px;*/
     border: 1px solid #d6d6d6;
     border-collapse: collapse;
-    padding-right: 100px;
-    padding-left: 100px;
+    /*padding-right: 100px;*/
+    /*padding-left: 100px;*/
     text-align: center;
 }
 #sub{
